<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    tools:context=".SignUpActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="72dp">

            <ImageView
                android:src="@drawable/mainlogo"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/imageCaption"/>

            <!--  Name Label -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/InputNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                app:hintTextAppearance="@style/TextLabel"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/InputName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:textColor="@color/Primary"
                    android:textSize="30sp"
                    android:hint="@string/Name" />

            </android.support.design.widget.TextInputLayout>

            <!-- Email Label -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/InputIdLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                app:hintTextAppearance="@style/TextLabel"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/InputId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:textColor="@color/Primary"
                    android:textSize="30sp"
                    android:hint="@string/ID" />

            </android.support.design.widget.TextInputLayout>

            <!-- Password Label -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/InputPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                app:hintTextAppearance="@style/TextLabel"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/InputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/Primary"
                    android:textSize="30sp"
                    android:hint="@string/Password"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/InputPhoneLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                app:hintTextAppearance="@style/TextLabel"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/InputPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/Primary"
                    android:textSize="30sp"
                    android:hint="@string/Phone"/>

            </android.support.design.widget.TextInputLayout>

            <!-- Signup Button -->
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnSignup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="72dp"
                android:layout_marginBottom="72dp"
                android:padding="12dp"
                android:text="@string/createAccount"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:background="@color/Primary"/>

            <TextView
                android:id="@+id/textLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="72dp"
                android:text="@string/backLogin"
                android:gravity="center"
                android:textColor="@color/SemiBoldColor"
                android:textSize="24sp"/>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>