<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WrittenConsentActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:text="실험 동의서"
                android:textColor="@color/Primary"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:background="@drawable/round_border"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Text1"
                    android:textSize="15sp" />
            </ScrollView>
            <RadioGroup
                android:id="@+id/agree1Group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="10dp"
                android:gravity="end"
                android:orientation="horizontal"
                android:paddingEnd="20dp">

                <RadioButton
                    android:id="@+id/agree1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:text="@string/agree" />

                <RadioButton
                    android:id="@+id/disagree1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/disagree" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:text="연구의 배경과 목적"
                android:textColor="@color/Primary"
                android:textSize="20sp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/round_border"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Text2"
                    android:textSize="15sp" />
            </ScrollView>

            <RadioGroup
                android:id="@+id/agree2Group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="10dp"
                android:gravity="end"
                android:orientation="horizontal"
                android:paddingRight="20dp">

                <RadioButton
                    android:id="@+id/agree2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:text="@string/agree" />

                <RadioButton
                    android:id="@+id/disagree2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/disagree" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/finalAgree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:padding="20dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/acceptText"
                    android:textColor="@color/Primary"
                    android:textSize="25sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/currentDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:textColor="@color/Primary"
                        android:textSize="25sp"
                        android:gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="20dp"
                        android:text="동의자"
                        android:textColor="@color/Primary"
                        android:textSize="25sp" />

                    <FrameLayout
                        android:id="@+id/signature"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_marginEnd="50dp"
                        android:background="@drawable/border" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="(인)"
                            android:textColor="@color/WhiteGray"
                            android:textSize="20sp"
                            android:layout_gravity="center"/>
                    </FrameLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/goToTest"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/test"
            android:textSize="20sp"
            android:background="@color/WhiteGray"
            android:textColor="@android:color/darker_gray">

        </Button>
    </LinearLayout>
</RelativeLayout>